adding content completed somewhat

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>toDoOrnotToDo</title>
 </head>
 <body>
-    <div class="main-grid">
+    <div class="main-grid" id="main-grid-id">
         
         <header class="header-nav">
             <div class="nav-left">
@@ -33,7 +33,6 @@
 
         </div>
 
-        <div id="root" class="main-content"></div>
     </div>
 </body>
 </html>
