minor stuff and todo grid layout setup done

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
         </header>
 
-        <div class="function-list">
+        <aside class="function-list">
 
             <ul class="functions-ul" id="todo-elements">
                 <li>Home</li>
@@ -31,7 +31,7 @@
                 <li class="project-list">Projects</li>
             </ul>
 
-        </div>
+        </aside>
 
     </div>
 </body>
