making newproject section

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,11 @@
                 <li>Home</li>
                 <li>Today</li>
                 <li>Week</li>
-                <li class="project-list">Projects</li>
-            </ul>
+                <ul class="project-list" id="project-list">Projects
 
+                </ul>
+            </ul>
+            
         </aside>
 
     </div>
