some css styling done

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         
         <header class="header-nav">
             <div class="nav-left">
-                <p class="logo">*logo place holder*</p>
+                <img src="./styles/assets/images/tasklogo3.png" alt="logo" srcset="logo">
                 <p class="page-name">Do stuff</p>
             </div>
 
